resources/css/style.css
/*Universal Stles*/

.html {
  font-size: 12px;
}

.body {

}
.bigcontainer {
  margin: 0 auto;
  width: 1200px;
  border: solid lightgray 2px;
}
/*Header*/
.header {
  height: 64px;
  display: flex;
  justify-content: space-between;
  border: solid pink 1px;
}

.logo {
  display: flex;
  justify-content: flex-start;
  padding-left: 24px;
  border: solid green 1px;
}


.nav {
  padding-right: 24px;

  display: flex;


  border: solid blue 1px;
}

.nav ul {
  display: flex;
  align-items: center;
  border: solid orange 1px;
}

.header .nav .square {
  width: 16px;
  height: 64px;
  background-color: skyblue;
}


/*Start Here*/

.starthere {
  background-color: lightgray;
  display: flex;
}

.starthere img {
  padding: 32px 24px;
  width: 60%;
  height: 60%;
}

.starttext {
  padding-left: 16px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: solid orange 1px;
}

.starttext h2 {
  font-size: 3rem;
}

.starttext p {
  font-size: 1.5rem;
}

.button {
  font-size: 1rem;
  font-weight: normal;
  background-color: black;
  color: white;
  padding: 8px 5em;
  border: solid green 2px;
}



/*newsfeed*/

.newsfeed {
  padding: 32px 24px;
  display: flex;

  border: solid green 1px;
}

.main-news {
  width: 60%;

  border: solid pink 1px;


}

.main-news img {
  width: 60%;


}

.main-news p {
  overflow: wrap;
}

.news {
  width: 40%;
  display: flex;
  border: solid blue 1px;
}

.news img {
  width: 35%;
  height: auto;
}

.newsstory {
  display: flex;
  flex-direction: column;
}




/*course catalog*/

.catalog {
  background-color: lightgray;
  display: flex;
  flex-direction: column;
  align-items: center;

}

.courses {
  padding: 16px 56px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  border: solid orange 1px;

}

.course {
  background-color: white;
  margin: 16px 16px;
  max-width: 30%;
  display: flex;
  flex-direction: column;
  border: solid purple 1px;
}

.course-image img {
  width: 100%;
  height: auto;
  border: solid red 1px;
}

.course-description {
  padding: 16px 32px 24px 16px;
  border: solid green 1px;
}


.course-description p {
  border: solid blue 1px;
  margin: 0px;
}
.course-description h3 {
  margin: 0px;
  border: solid blue 1px;
}
.course-description h4 {
  margin: 0px;
  padding: 8px 0px;
  border: solid blue 1px;
}
/*thesis*/

.thesis {
  display: flex;
  flex-direction: column;
  align-items: center;
  border: solid red 1px;
}

.thesis-title {
  padding-top: 32px;
  padding-bottom: 32px;
}

.newsfeed {
  padding: 0px;
  max-height: 600px;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;


  border: solid limegreen 1px;
}

.news {

  border: solid blue 1px;
}

.main {
  width: 60%;
  border: solid orange 1px;
  padding: 0px 24px 24px 24px;
  display: flex;
  flex-direction: column;
}

.main .news-video video {
  width: 100%;
  height: auto;
  border: solid purple 1px;
}

.article {
  width: 35%;
  background-color: hotpink;


  border: solid black 3px;
}

.news-image {
  width: 40%;
  padding: 16px;
  border: solid hotpink 2px;
}

.news-image img {
  width: 100%;
}

.news-bite {
  width: 100%;
  border: solid green 2px;
}

.news-bite h3 {
  margin: 0px;
}

.newsbite p {
  margin: 0px;
}


/*footer*/

.footer {
  height: 75px;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

.copyright {
  padding-left: 24px;
  padding-top: 16px;
}

.copyright p {
  margin: 0px;
}

.terms {
  padding-right: 24px;
  padding-top: 16px;
}


/*mobile considerations*/

